カラム名変更

--- a/app/views/company/calendars/index.html.erb
+++ b/app/views/company/calendars/index.html.erb
@@ -58,7 +58,7 @@
           <div class="form-group row">
             <div class="col-sm-12">
               <div class="input-group">
-                <%= f.text_field :url, { autocomplete: "off", class: "form-control", placeholder:  t('.url'), maxlength: 240, required: false } %>
+                <%= f.text_field :site_url, { autocomplete: "off", class: "form-control", placeholder:  t('.site_url'), maxlength: 240, required: false } %>
               </div>
             </div>
           </div>
