--- a/app/views/company/calendars/save.js.erb
+++ b/app/views/company/calendars/save.js.erb
@@ -1,2 +1,5 @@
+<% if params[:id].present? %>
+document.dispatchEvent(new CustomEvent('remove_event', { detail: '<%= params[:id] %>' }));
+<% end %>
 document.dispatchEvent(new CustomEvent('add_event', { detail: JSON.parse('<%= @calendar.json_calendar_event.html_safe %>') }));
 $('[data-izimodal-close]')[0].click();
