--- a/app/views/company/calendars/index.html.erb
+++ b/app/views/company/calendars/index.html.erb
@@ -111,7 +111,7 @@
           <div class="form-group row">
             <div class="col-sm-12">
               <%= f.submit class: 'btn btn-primary', value: t('.submit_button'), data: { confirm: t('.submit_confirm'), disable_with: t('.submit_disable_with') } %>
-              <%= f.submit id: :delete_button, class: 'btn btn-danger', value: t('common.delete_link'), data: { confirm: t('common.delete_confirm') } %>
+              <%= f.submit id: :delete_button, class: 'btn btn-danger', value: t('common.delete_link'), data: { confirm: t('common.delete_confirm'), disable_with: t('.submit_disable_with') } %>
             </div>
           </div>
         <% end %>
