--- a/app/views/company/settings/edit_notify_setting.html.erb
+++ b/app/views/company/settings/edit_notify_setting.html.erb
@@ -113,6 +113,23 @@
                 </div>
               </div>
 
+              <div class="form-group row">
+                <div class="col-12">
+                  <%= f.label :notify_target, t('.auto_message_on_time'), {class: 'form-label'} %>
+                </div>
+                <div class="input-group col-12">
+                  <%= f.text_area :auto_message_on_time, { class: 'form-control', placeholder: Api::V1::LinesController::ON_TIME_MESSAGE, maxlength: 240, rows: 4 } %>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-12">
+                  <%= f.label :notify_target, t('.auto_message_off_time'), {class: 'form-label'} %>
+                </div>
+                <div class="input-group col-12">
+                  <%= f.text_area :auto_message_off_time, { class: 'form-control', placeholder: Api::V1::LinesController::OFF_TIME_MESSAGE, maxlength: 240, rows: 4 } %>
+                </div>
+              </div>
             </div>
 
             <div class="card-footer">
