--- a/app/views/company/items/index.html.erb
+++ b/app/views/company/items/index.html.erb
@@ -2,13 +2,13 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::COMPANY_ITEMS_INDEX %></h1>
+        <h1 class="m-0 text-dark"></h1>
       </div>
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item active"><%= Const::View::Name::COMPANY_ITEMS_INDEX %></li>
+          <li class="breadcrumb-item active"></li>
         </ol>
       </div>
     </div>
