--- a/app/views/company/settings/edit.html.erb
+++ b/app/views/company/settings/edit.html.erb
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::COMPANY_SETTING_EDIT %></h1>
+        <h1 class="m-0 text-dark"><%= t('common.company_setting_edit') %></h1>
       </div>
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item"><a href="<%= company_setting_path %>"><%= Const::View::Name::COMPANY_SETTING_SHOW %></a></li>
-          <li class="breadcrumb-item active"><%= Const::View::Name::COMPANY_SETTING_EDIT %></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('common.home') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= company_setting_path %>"></a></li>
+          <li class="breadcrumb-item active"><%= t('common.company_setting_edit') %></li>
         </ol>
       </div>
     </div>
