--- a/app/views/customer/visited_logs/edit.html.erb
+++ b/app/views/customer/visited_logs/edit.html.erb
@@ -2,15 +2,15 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::VISITED_LOG %></h1>
+        <h1 class="m-0 text-dark"><%= t('common.visited_log') %></h1>
       </div>
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item"><a href="<%= customers_path %>"><%= Const::View::Name::CUSTOMER_INDEX %></a></li>
-          <li class="breadcrumb-item"><a href="<%= customer_path(@company.code, @customer) %>"><%= Const::View::Name::CUSTOMER_SHOW %></a></li>
-          <li class="breadcrumb-item active"><%= Const::View::Name::VISITED_LOG %></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('common.home') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= customers_path %>"><%= t('common.customer_index') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= customer_path(@company.code, @customer) %>"><%= t('common.customer_show') %></a></li>
+          <li class="breadcrumb-item active"><%= t('common.visited_log') %></li>
         </ol>
       </div>
     </div>
