--- a/app/views/company/items/new.html.erb
+++ b/app/views/company/items/new.html.erb
@@ -1,4 +1,7 @@
 <div class="content-header">
+</div>
+
+<div class="content-header">
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
