--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,11 @@
         <a href="<%= company_calendars_path %>" class="nav-link"><%= t('common.calendar') %></a>
       </li>
     <% end %>
+    <% if can?(:manage, :item) %>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="<%= company_items_path %>" class="nav-link"><%= t('common.item') %></a>
+      </li>
+    <% end %>
   </ul>
 
   <ul class="navbar-nav ml-auto">
