--- a/app/views/company/items/show.html.erb
+++ b/app/views/company/items/show.html.erb
@@ -4,7 +4,7 @@
 <section class="content">
   <div class="card">
     <div class="card-header">
-      <h3 class="card-title">情報</h3>
+      <h3 class="card-title"><%= t('common.info') %></h3>
     </div>
 
     <div class="card-body">
@@ -31,6 +31,33 @@
         <a href="<%= edit_company_item_path(@company.code, @item) %>" class="btn btn-info float-left mr-2">　編集　</a>
       <% end %>
       <a href="<%= company_items_path %>" class="btn btn-default float-right">　戻る　</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <h3 class="card-title"><%= t('common.collection_item') %></h3>
+    </div>
+
+    <div class="card-body">
+      <table class="table table-bordered">
+        <tbody>
+          <tr>
+            <th class="text-nowrap"><%= CollectionItem.human_attribute_name(:key) %></th>
+            <th class="text-nowrap"><%= CollectionItem.human_attribute_name(:value) %></th>
+            <th class="text-nowrap"><%= CollectionItem.human_attribute_name(:sort_order) %></th>
+            <th class="text-nowrap"><%= CollectionItem.human_attribute_name(:enabled) %></th>
+          </tr>
+          <% @item.collection_items.each do |ci| %>
+            <tr>
+              <td><%= ci.key %></td>
+              <td><%= ci.value %></td>
+              <td><%= ci.sort_order %></td>
+              <td><%= ci.enabled? ? t('common.enabled') : t('common.disabled') %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </section>
