--- a/app/views/company/items/_collection_items_form.html.erb
+++ b/app/views/company/items/_collection_items_form.html.erb
@@ -8,7 +8,7 @@
       <div class="form-row">
         <div class="form-group col-sm-3">
           <%= ci.label :key %>
-          <%= ci.text_field :key, { class: 'form-control d-inline', placeholder: '半角英字と「_」', maxlength: '20' } %>
+          <%= ci.text_field :key, { class: 'form-control d-inline', maxlength: '20' } %>
         </div>
         <div class="form-group col-sm-3">
           <%= ci.label :value %>
