itemバリデーション調整

--- a/app/views/company/items/show.html.erb
+++ b/app/views/company/items/show.html.erb
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <% @item.collection_items.present? %>
+  <% if @item.collection_items.present? %>
     <div class="card">
       <div class="card-header">
         <h3 class="card-title"><%= t('common.collection_item') %></h3>
