--- a/app/views/company/calendars/index.html.erb
+++ b/app/views/company/calendars/index.html.erb
@@ -43,7 +43,7 @@
           <div class="form-group row">
             <div class="col-sm-6">
               <div class="input-group">
-                <%= f.select :event_type, Calendar::event_type_arr, { include_blank: '選択してください。' }, { class: 'custom-select', required: true } %>
+                <%= f.select :event_type, @company.calendar_event_types, { include_blank: '選択してください。' }, { class: 'custom-select', required: true } %>
               </div>
             </div>
           </div>
