--- a/app/views/company/staffs/_form.html.erb
+++ b/app/views/company/staffs/_form.html.erb
@@ -31,6 +31,7 @@
 
             <div class="card-footer">
               <%= f.submit class: 'btn btn-primary', data: { confirm: t('.submit_confirm'), disable_with: t('.submit_disable_with') } %>
+              <%= link_to(t('.delete_link'), company_staff_path(@company.code, user), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: t('.delete_confirm') }) if user.persisted? %>
             </div>
           <% end %>
         </div>
