LINE情報更新処理

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -174,7 +174,7 @@
                     $('#customer_agreement').on('invalid', function(e) {
                       if(this.validity.valueMissing){
                         //要素が入力必須のフィールドであるのに値がない場合
-                        e.target.setCustomValidity('利用規約の同意をお願いします。');
+                        e.target.setCustomValidity('同意をお願いします。');
                       }
                     });
                   });
