カレンダー公開設定機能

--- a/app/views/company/settings/show.html.erb
+++ b/app/views/company/settings/show.html.erb
@@ -52,7 +52,7 @@
         <% end %>
       <% end %>
       <% if can? :manage, :calendar %>
-        <a href="<%= edit_calnedar_setting_company_setting_path %>" class="btn btn-success float-left mr-2"><%= t('.calendar_setting_link') %></a>
+        <a href="<%= edit_calnedar_setting_company_setting_path %>" class="btn btn-success float-left mr-2"><%= t('.calendar_setting') %></a>
       <% end %>
       <a href="<%= homes_path %>" class="btn btn-default float-right">　戻る　</a>
     </div>
