--- a/app/views/company/settings/edit_notify_setting.html.erb
+++ b/app/views/company/settings/edit_notify_setting.html.erb
@@ -8,7 +8,7 @@
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('.home') %></a></li>
-          <li class="breadcrumb-item"><a href="<%= company_setting_path %>"><%= t('.company_setting_show') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= company_setting_path %>"><%= t('..company_setting') %></a></li>
           <li class="breadcrumb-item active"><%= t('.company_setting_line_notify_setting') %></li>
         </ol>
       </div>
