--- a/app/views/company/calendars/save.js.erb
+++ b/app/views/company/calendars/save.js.erb
@@ -8,7 +8,20 @@
     <% if params[:id].present? %>
       document.dispatchEvent(new CustomEvent('remove_event', { detail: '<%= params[:id] %>' }));
     <% end %>
-    document.dispatchEvent(new CustomEvent('add_event', { detail: JSON.parse('<%= @calendar.json_calendar_event.html_safe %>') }));
+
+    var parseJson = function(jsonString) {
+      var converted = convertNl(jsonString);
+      return JSON.parse(converted);
+    };
+
+    var convertNl = function(jsonString) {
+      return jsonString
+        .replace(/(\r\n)/g, '\n')
+        .replace(/(\r)/g,   '\n')
+        .replace(/(\n)/g,  '\\n');
+    };
+
+    document.dispatchEvent(new CustomEvent('add_event', { detail: parseJson('<%= @calendar.json_calendar_event.html_safe %>') }));
     $('[data-izimodal-close]')[0].click();
   <% else %>
     alert('<%= @calendar.errors.full_messages.first %>');
