--- a/app/views/public/homes/calendar.html.erb
+++ b/app/views/public/homes/calendar.html.erb
@@ -31,9 +31,11 @@
     <div>
       <div class="form-group row">
         <div class="col-sm-12">
-          <div class="input-group">
-            <b id="calendar_title" class="p-2">HOGE</b>
-          </div>
+          <h4 id="calendar_title" class="p-2">HOGE</h4>
+        </div>
+
+        <div class="col-sm-12">
+          <div id="calendar_memo" class="p-2">HOGE</div>
         </div>
       </div>
 
