カレンダーデザイン調整

--- a/app/views/public/homes/index_for_customer_user.html.erb
+++ b/app/views/public/homes/index_for_customer_user.html.erb
@@ -12,7 +12,7 @@
           </span>
 
           <div class="info-box-content">
-            <span class="info-box-text"><%= t('common.calendar') %></span>
+            <span class="info-box-text"><%= t('common.calendar_event_list') %></span>
             <span class="info-box-number"><%= @calendar_events.size() %><small>件</small></span>
           </div>
         </div>
