カレンダーデザイン調整

--- a/app/views/layouts/customer.html.erb
+++ b/app/views/layouts/customer.html.erb
@@ -21,6 +21,8 @@
 
   <%= render '/layouts/customer/header' %>
 
+  <%= render '/layouts/customer/main_sidebar' %>
+
   <div class="content-wrapper">
     <%= yield %>
   </div>
