--- a/app/views/layouts/customer/_main_sidebar.html.erb
+++ b/app/views/layouts/customer/_main_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="main-sidebar sidebar-light-lightblue elevation-4" <%= "style='background-color:pink'".html_safe if ENV['MODE'].nil? %>>
+<aside class="main-sidebar sidebar-light-lightblue elevation-4" <%= "style='background-color:aqua'".html_safe if ENV['MODE'].nil? %>>
 
   <a href="#" class="brand-link">
     <img src="<%= asset_pack_path 'media/images/logo.png'%>" alt="COSMOS Logo" class="brand-image img-circle elevation-3"
@@ -11,6 +11,23 @@
   <div class="sidebar">
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <li class="nav-item">
+          <a href="<%= homes_path %>" class="nav-link">
+            <i class="nav-icon fas fa-home"></i>
+            <p>
+              <%= t('common.home') %>
+            </p>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="<%= calendar_homes_path %>" class="nav-link">
+            <i class="nav-icon fas fa-calendar-alt"></i>
+            <p>
+              <%= t('common.calendar_event_list') %>
+            </p>
+          </a>
+        </li>
       </ul>
     </nav>
   </div>
