--- a/app/views/public/homes/calendar.html.erb
+++ b/app/views/public/homes/calendar.html.erb
@@ -1,26 +1,12 @@
 <%= javascript_pack_tag 'company/open_calendar' %>
 <%= stylesheet_pack_tag 'company/open_calendar' %>
 
-<div class="content-header">
-  <div class="container-fluid">
-    <div class="row mb-2">
-      <div class="col-sm-6">
-        <h1 class="m-0 text-dark"></h1>
-      </div>
-    </div>
-  </div>
-</div>
-
 <section class="content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
-        <div class="card card-primary">
-          <div class="card-body p-0">
-            <!-- THE CALENDAR -->
-            <div id="calendar"></div>
-          </div>
-        </div>
+      <div class="col-md-12 pt-3">
+        <!-- THE CALENDAR -->
+        <div id="calendar"></div>
       </div>
     </div>
   </div>
@@ -66,6 +52,16 @@ td.fc-day-sat {
 }
 td.fc-day-sun {
   background-color: #ffeaea;
+}
+.fc-toolbar, .fc-toolbar.fc-header-toolbar {
+  margin: 0;
+  padding: 0rem;
+}
+.fc-toolbar {
+  flex-direction: row;
+}
+.fc .fc-toolbar.fc-header-toolbar {
+  margin-bottom: 0.5em !important;
 }
 </style>
 <% end %>
